src/main/java/com/example/demobooks/error/ApiError.java
package com.example.demobooks.error;

import java.io.Serializable;

public interface ApiError extends Serializable {
}
